--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -20,7 +20,7 @@
 }
 
 .hd-Header_Block {
-  flex: 0 0 33.33%;
+  flex: 1 1 50%;
   display: flex;
 }
 
