--- a/src/sass/tools/_variables.scss
+++ b/src/sass/tools/_variables.scss
@@ -21,6 +21,7 @@ $font-body: 'Calluna-Regular';
 :root {
   --gutter: 20px;
   --grid-gap: 40px;
+  --grid-container: 1360px;
 }
 
 @include Breakpoint('xs') {
